# freat

./: .gitignore  LICENSE  README.md  _agent.js  pyproject.toml  run.py  server.py
agent/: package-lock.json  package.json  tsconfig.json
agent/src/: disassemble.ts  exception.ts  index.ts  intercept.ts  logger.ts  maps.ts  memory.ts  patch.ts  ping.ts  register.ts  stoppoint.ts
client-godot/: export_presets.cfg  icon.svg.import  project.godot
client-godot/scenes/: main.tscn
client-godot/scripts/: MultiSelectTree.gd  MultiSelectTree.gd.uid  RPCManager.gd  RPCManager.gd.uid  main.gd  main.gd.uid
gui/: Main.tscn  ProcessList.tscn  UI.tscn  UI_LLM.tscn  WriteDialog.tscn  icon.svg.import  project.godot
gui/scripts/: WebsocketManager.gd  WebsocketManager.gd.uid  process_list.gd  process_list.gd.uid  ui_control.gd  ui_control.gd.uid  ui_controller.gd  ui_controller.gd.uid
scripts/: benchmark.py  benchmark_config.json  client_example.py
server-python/: pyproject.toml
server-python/agent/: package-lock.json  package.json  rollup.config.js  tsconfig.json
server-python/agent/agent/: index.ts  logger.ts  memory.ts  scan.ts  types.ts  watchpoint.ts
server-python/agent/native/: .clangd  freezer.c  log.c  scanner.c
server-python/src/freat_server/: __init__.py  _agent.js  config.py  hub.py  server.py
server-python/src/freat_server/targets/: base.py  local.py  proton.py  remote.py  wine.py
server-python/tests/: target  test_integration.py
server-python/tests/target_program/: target.c
